--- a/css/style.css
+++ b/css/style.css
@@ -6,17 +6,23 @@ body {
 }
 
 h1 {
-    color: #007bff;
+    color: #10e15d;
     text-align: center;
 }
 
-form {
+.food-container {
+    display: flex;
+    justify-content: space-around;
+    margin: 20px;
+}
+
+.food-info {
     max-width: 400px;
-    margin: 20px auto;
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
 }
 
 label {
@@ -36,7 +42,7 @@ input[type="text"] {
 button {
     width: 100%;
     padding: 12px;
-    background-color: #007bff;
+    background-color: #10e15d;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -45,7 +51,7 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #08cc4f;
 }
 
 ul {
