--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ body {
   height: auto;
 }
 
-.header_section {}
+/* .header_section {} */
 
 .header_section .container-fluid {
   padding-right: 25px;
@@ -210,7 +210,7 @@ a:focus {
   background-repeat: no-repeat;
 }
 
-.slider_item-container .slider_item-detail {}
+/* .slider_item-container .slider_item-detail {} */
 
 .slider_item-detail h1 {
   font-weight: 700;
